refactory to split the token from the purchases a user does
